2011-07-26  Peter Schueller  <ps@kr.tuwien.ac.at>

	Summary of changes for going from version 1.7.X to version 2.Y:

	Most important changes:

	* Implemented Evaluation formalism with Evaluation Graph and Model Graph as
	described in the paper "Pushing Efficient Evaluation of HEX Programs by Modular
	Decomposition" by Thomas Eiter, Michael Fink, Giovambattista Ianni, Thomas
	Krennwallner, and Peter Schüller at LPNMR 2011.
	Currently implemented evaluation heuristics are "old" (old dlvhex behavior),
	"trivial" (keep all initial evaluation units, causes a lot of overhead), and
	"easy" (try to collapse evaluation units that are related). Heuristics are
	selectable with --heuristics.

	* Implemented incremental model generation (one model at a time).

	* Entities are now managed using 64bit integers (class dlvhex::ID) and an
	entity registry where all constants, rules, ... are registered.

	* Query Support:
	Queries are now supported as an 'internal' plugin (use --query-enable),
	namely ground and nonground queries as in DLV, support for displaying all
	witnesses, and for incremental cautious nonground querying. External atoms
	are currently not supported in queries.

	* Strong Negation is now implemented as an internal plugin and has to be
	activated using --strongnegation-enable (see also strong negation testcases).

	Plugin API changes:

	* Plugins must now return PluginAtomPtrs/PluginConverterPtrs/... that use
	a "deleter" compiled into the respective plugin (see PluginInterface.h)
	* New central auxiliary constant management method in Registry:
	getAuxiliaryConstantSymbol(), PluginAtom no longer manages its auxiliaries.
	* added comfortable "text-only no-registry-ID-trouble" (and slow) plugin
	interface ComfortPluginInterface.hpp.
	* Plugins may now provide an alternative HEX parser by overriding createParser().
	* Plugins may now extend the HEX parser using parser modules.
	* Plugins may now register "auxiliary printer callbacks" for printing certain auxiliaries.